# tzuroni-internship-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  weather_trading.db
app/agents/: base.py  execution.py  hedging.py  local_research.py  market.py  news_research.py  portfolio.py  prediction.py  risk_management.py  supervisor.py  weather_intelligence.py
app/dashboard/: main.py
app/database/: connection.py  schemas.py
app/models/: prediction_model.py
app/services/: market_service.py  research_service.py  telegram_service.py  trading_service.py  weather_service.py
docs/: agent_workflow.md  api.md  architecture.md  database.md  deployment.md  prediction_model.md  risk_management.md
scripts/: run_pipeline.py
tests/: test_execution.py  test_prediction.py  test_risk.py
