[tool.poetry]
name = "weather-market-ai"
version = "0.1.0"
description = "Autonomous Multi-Agent Weather Prediction & Prediction Markets AI Trading System"
authors = ["Antigravity Developer <antigravity@gemini.ai>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
streamlit = "^1.32.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
plotly = "^5.19.0"
scikit-learn = "^1.4.0"
sqlalchemy = "^2.0.28"
pydantic = "^2.6.4"
httpx = "^0.27.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
statsmodels = "^0.14.1"
jinja2 = "^3.1.3"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
